<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/supervisor_username"/>

    <EditText
        android:id="@+id/input_username_spv"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/supervisor_password"/>

    <EditText
        android:id="@+id/input_password_spv"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/remark"/>

    <EditText
        android:id="@+id/input_remark_spv"
        android:layout_width="match_parent"
        android:inputType="text"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

</LinearLayout>