<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/sign"/>

        <Button
            android:id="@+id/test_json"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Json"/>


        <Button
            android:id="@+id/btn_reset_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/reset_signature"/>

    </LinearLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="300dp"
        app:penColor="@android:color/black" />


    <Button
        android:id="@+id/btn_done_sig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/done" />
</LinearLayout>