<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_closing"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="valet.digikom.com.valetparking.ClosingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:text="@string/closing_date"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:text="@string/from"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/input_date_from"
                    android:layout_width="0dp"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>

                <Button
                    android:text="@string/set"
                    android:background="@null"
                    android:layout_width="0dp"
                    android:layout_gravity="start"
                    android:paddingLeft="16dp"
                    android:layout_weight="3"
                    android:textAlignment="viewStart"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_set_from" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/black"/>

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="7dp"
                    android:background="@drawable/dot"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/to"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/input_date_until"
                    android:layout_width="0dp"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>

                <Button
                    android:id="@+id/btn_set_until"
                    android:text="@string/set"
                    android:background="@null"
                    android:layout_width="0dp"
                    android:layout_gravity="start"
                    android:paddingLeft="16dp"
                    android:layout_weight="3"
                    android:textAlignment="viewStart"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:text="@string/valet_total"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:text="@string/regular"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_regular"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:text="@string/exclusive"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_exclusive"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:text="@string/total"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_total"
                    android:textSize="16sp"
                    android:layout_gravity="end"
                    android:textAlignment="viewEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
